--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -10,7 +10,7 @@
         android:label="HomeFragment">
         <argument
             android:name="mailbox"
-            app:argType="com.materialstudies.reply.ui.home.Mailbox"
+            app:argType="io.materialstudies.reply.ui.home.Mailbox"
             android:defaultValue="INBOX" />
         <action
             android:id="@+id/action_homeFragment_to_emailFragment"
