--- a/app/src/main/res/layout/email_item_layout.xml
+++ b/app/src/main/res/layout/email_item_layout.xml
@@ -22,11 +22,11 @@
         android:layout_marginHorizontal="@dimen/grid_0_5"
         android:background="?attr/colorSecondary">
 
-        <!-- TODO: Set MaterialCardView transition name. -->
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/card_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:transitionName="@{@string/email_card_transition_name(email.id)}"
             android:elevation="@dimen/plane_00"
             android:clickable="true"
             android:focusable="true"
