--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -8,6 +8,7 @@
         android:layout_height="match_parent"
         android:background="?attr/colorSurface"
         android:orientation="vertical"
+        android:transitionGroup="true"
         app:paddingTopSystemWindowInsets="@{true}">
 
         <androidx.appcompat.widget.Toolbar
